# cargo-rust

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
bindgen-plugin/src/: lib.rs
extism-plugin/: Cargo.toml
extism-plugin/src/: lib.rs
rust/: .gitignore  Cargo.toml
rust/src/: bindgen_example.rs  lib.rs
src/: WasmComponent.tsx  index.tsx  main.ts
web/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.css  App.tsx  index.css  index.tsx
web/src/components/: IndexPage.css  IndexPage.tsx  NavBar.css  NavBar.tsx  WasmBindgenExample.css  WasmBindgenExample.tsx  WasmComponent.css  WasmComponent.tsx  car_hello_world.d.ts  wasm.d.ts
web/src/hooks/: useWasmModule.ts
