[package]
name = "car-hello-world"
version = "0.1.0"
edition = "2021"
description = "一个基于Extism的Rust WebAssembly插件"
authors = ["18321212571@163.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
extism-pdk = "1.0.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

[profile.release]
opt-level = "s"
lto = true

[target.wasm32-wasi]
rustflags = ["-C", "target-feature=+bulk-memory"]