[package]
name = "car-hello-world"
version = "0.1.0"
edition = "2021"
description = "一个基于Extism的Rust WebAssembly插件"
authors = ["18321212571@163.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.0"

[profile.release]
opt-level = 3
lto = true

[target.wasm32-wasi]
rustflags = ["-C", "target-feature=+bulk-memory"]