[package]
name = "car-hello-world"
version = "0.1.0"
edition = "2021"
description = "一个基于Extism的Rust WebAssembly插件"
authors = ["18321212571@163.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.0.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
opt-level = "s"
lto = true

[target.wasm32-wasi]
rustflags = ["-C", "target-feature=+bulk-memory"]